# ttyhlauncher

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  _clang-format  aboutdialog.cpp  aboutdialog.ui  checkoutdialog.cpp  checkoutdialog.h  checkoutdialog.ui  clientmanagerdialog.h  clonedialog.cpp  clonedialog.h  clonedialog.ui  collectdialog.cpp  collectdialog.h  collectdialog.ui  config.h.in  datafetcher.cpp  datafetcher.h  downloadmanager.cpp  downloadmanager.h  exportdialog.cpp  exportdialog.h  exportdialog.ui  feedbackdialog.cpp  feedbackdialog.h  feedbackdialog.ui  fetchdialog.cpp  fetchdialog.h  fetchdialog.ui  filefetcher.cpp  filefetcher.h  fileinfo.cpp  fileinfo.h  fileinstaller.cpp  fileinstaller.h  gamerunner.cpp  gamerunner.h  hashchecker.cpp  (+47 more)
data/: CMakeLists.txt  feedbackdialog.ui  resources.qrc.in  selfupdatedialog.ui  skinuploaddialog.ui  storeinstalldialog.ui  updatedialog.ui
resources/: CMakeLists.txt  error.html  favicon.icns  favicon.rc  icon.icns  loading.html  logo.txt  resources.qrc  users.txt
resources/unix/: ttyhlauncher.desktop
src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  datafetcher.cpp  datafetcher.h  feedbackdialog.cpp  feedbackdialog.h  filefetcher.cpp  filefetcher.h  fileinfo.cpp  fileinfo.h  fileinstaller.cpp  gamerunner.cpp  gamerunner.h  jsonparser.cpp  jsonparser.h  launcher.cpp  launcher.h  launcherwindow.cpp  launcherwindow.h  libraryinfo.h  licensedialog.cpp  licensedialog.h  logger.cpp  logview.cpp  main.cpp  oldlogger.cpp  oldlogger.h  oldsettings.cpp  oldsettings.h  selfupdatedialog.cpp  settings.cpp  settings.h  settingsdialog.cpp  settingsdialog.h  skinuploaddialog.cpp  skinuploaddialog.h  storeinstalldialog.cpp  storeinstalldialog.h  storemanagedialog.cpp  (+7 more)
src/json/: argumentinfo.cpp  argumentinfo.h  assetdownloadinfo.cpp  assetdownloadinfo.h  assetsindex.cpp  assetsindex.h  checkinfo.cpp  checkinfo.h  dataindex.cpp  dataindex.h  downloadinfo.cpp  downloadinfo.h  libararydownloadinfo.cpp  libararydownloadinfo.h  libraryinfo.cpp  libraryinfo.h  libraryrule.cpp  libraryrule.h  loggingdownloadinfo.cpp  loggingdownloadinfo.h  prefix.cpp  prefix.h  prefixesindex.cpp  prefixesindex.h  prefixinfo.cpp  prefixinfo.h  prefixversionsindex.cpp  prefixversionsindex.h  versionindex.cpp  versionindex.h
src/logs/: filelogger.cpp  filelogger.h  logger.cpp  logger.h  namedlogger.cpp  namedlogger.h  wrappedlogger.cpp  wrappedlogger.h
src/master/: loginreplydata.h  replydata.h  ttyhclient.cpp  ttyhclient.h
src/news/: newsfeed.cpp  newsfeed.h
src/profiles/: filesindex.cpp  filesindex.h  profiledata.cpp  profiledata.h  profileinfo.h  profilerunner.cpp  profilerunner.h  profilesmanager.cpp  profilesmanager.h  profilesopresults.h
src/settings/: settingsdata.cpp  settingsdata.h  settingsmanager.cpp  settingsmanager.h
src/storage/: downloader.cpp  downloader.h  downloadfilereply.cpp  downloadfilereply.h  filechecker.cpp  filechecker.h  fileinfo.h
src/ui/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  profiledialog.cpp  profiledialog.h  profiledialog.ui  skindialog.cpp  skindialog.h  skindialog.ui
src/utils/: defer.h  downloadfilereply.cpp  downloadfilereply.h  indexhelper.h  migrations.cpp  migrations.h  network.cpp  network.h  platform.cpp  platform.h  zip.cpp  zip.h
src/versions/: fullversionid.cpp  fullversionid.h  prefix.h  versionsmanager.cpp  versionsmanager.h
translations/: CMakeLists.txt  LINGUAS  koi7.qm  koi7.ts  magick.sh  ru.qm  ru.ts  translations.qrc.in  ttyhlauncher_koi7.ts  ttyhlauncher_ru.ts
ui/: CMakeLists.txt  aboutdialog.ui  feedbackdialog.ui  launcherwindow.ui  licensedialog.ui  settingsdialog.ui  skinuploaddialog.ui  storemanagedialog.ui  updatedialog.ui
